# Project-team

./: .gitmodules  ActionLog.cpp  AquaticSoilMix.h  Bed.cpp  Bed.h  CarePresets.h  CareStrategy.h  CustomPlantPackage.h  CustomerNurseryFacade.cpp  CustomerNurseryFacade.h  DeadState.cpp  DeadState.h  DefaultBuilder.h  DesertFactory.cpp  DesertStrategy.cpp  DesertStrategy.h  DummyOrderItem.h  DummyPlant.cpp  DummyPlant.h  DummyPlantFlyweight.cpp  DummyPlantFlyweight.h  DummyPlantKitFactory.cpp  DummyPlantState.h  DummySalesService.cpp  DummySalesService.h  DummySpeciesCatalog.cpp  Events.h  Fertilize.cpp  Fertilize.h  Fetilize.cpp  Fetilize.h  FlyweightSKUIterator.cpp  FlyweightSKUIterator.h  GlazedCeramicPot.h  Greenhouse.cpp  Greenhouse.h  GreenhouseIterator.cpp  GreenhouseIterator.h  GrittyLimeSoilMix.h  GrowingState.cpp  (+98 more)
Practical5/: Final Communication Diagram.vpp  Sequence Command.vpp  StateDiagram.vpd
Project/: ActionLog.h  AquaticBasketPot.cpp  AquaticBasketPot.h  AquaticSoilMix.cpp  AquaticSoilMix.h  CeramicPot.cpp  CeramicPot.h  ChatMediator.cpp  ChatMediator.h  Colleague.h  Command.cpp  Command.h  Customer.cpp  Customer.h  CustomerDash.cpp  CustomerDash.h  CustomerService.cpp  CustomerService.h  DeadState.cpp  DeadState.h  DesertFactory.cpp  DesertFactory.h  DesertStrategy.cpp  Doxyfile  Events.h  Fertilize.h  GiftWrap.cpp  GiftWrap.h  GlazedCeramicPot.cpp  GlazedCeramicPot.h  Greenhouse.cpp  Greenhouse.h  GreenhouseIterator.cpp  GreenhouseIterator.h  GrittyLimeSoilMix.cpp  GrittyLimeSoilMix.h  GrowingState.cpp  GrowingState.h  IndoorFactory.cpp  IndoorFactory.h  (+89 more)
Project/GUI/: CMakeLists.txt  SimpleCustomerWindow.cpp  SimpleCustomerWindow.h  SimpleLoginDialog.cpp  SimpleLoginDialog.h  SimpleStaffWindow.cpp  SimpleStaffWindow.h  main.cpp
Project/html/: _action_log_8h.html  _action_log_8h.js  _action_log_8h_source.html  _aquatic_basket_pot_8h.html  _aquatic_basket_pot_8h.js  _aquatic_basket_pot_8h_source.html  _aquatic_soil_mix_8h.html  _aquatic_soil_mix_8h.js  _aquatic_soil_mix_8h_source.html  _care_strategy_8h.html  _care_strategy_8h_source.html  _ceramic_pot_8h.html  _ceramic_pot_8h.js  _ceramic_pot_8h_source.html  _chat_mediator_8h.html  _chat_mediator_8h.js  _chat_mediator_8h_source.html  _colleague_8h.html  _colleague_8h.js  _colleague_8h_source.html  _command_8h.html  _command_8h_source.html  _customer_8h.html  _customer_8h_source.html  _customer_dash_8cpp.html  _customer_dash_8h.html  _customer_dash_8h.js  _customer_dash_8h_source.html  _customer_service_8h.html  _customer_service_8h.js  _customer_service_8h_source.html  _dead_state_8cpp.html  _dead_state_8h.html  _dead_state_8h_source.html  _desert_factory_8h.html  _desert_factory_8h.js  _desert_factory_8h_source.html  _desert_strategy_8cpp.html  _desert_strategy_8h.html  _desert_strategy_8h.js  (+508 more)
Project/latex/: _action_log_8h.tex  _action_log_8h_source.tex  _aquatic_basket_pot_8h.tex  _aquatic_basket_pot_8h_source.tex  _aquatic_soil_mix_8h.tex  _ceramic_pot_8h.tex  (+316 more)
dummy/: DummyInventoryService.cpp  DummyInventoryService.h  DummyOrderItem.h  DummyPackageDirector.cpp  DummyPackageDirector.h  DummyPlantKitFactory.h  DummyPlantState.cpp  DummySalesService.cpp  DummySalesService.h  DummySpeciesCatalog.h
include/: AquaticBasketPot.h  Bed.h  CeramicPot.h  DeadState.h  DesertFactory.h  MediterraneanFactory.h  PeatSoilMix.h  Plant.h  PlantBedMemento.h  PlantContainer.h  SandySoilMix.h  SpeciesFlyweight.h  SpeciesKey.h  TropicalFactory.h
src/: DefaultBuilder.cpp  IndoorStrategy.cpp  MediterraneanFactory.cpp  Plant.cpp  PlantKitFactory.cpp  SeedlingState.cpp  SpeciesCatalog.cpp  SpeciesKey.cpp  UnsharedSpeciesFlyweight.cpp  WetlandFactory.cpp
tests/: FlyWeightTest.cpp  IteratorTest.cpp  Makefile  flyweight_test  test_main
(+107 files in other folders)
